--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0"
